28.jun (la)
      - add alternative brevis notehead group (patch by Miwarre)
      - don't play midi note according to preferences (#10024)
25.jun (lv)
      - fix #11245: MusicXML doesn't save Tempo Text if there's no name
       (la)
      - better handling of Tab key in text element
24.jun (la)
      - fix #11246: change default number of measures and pickup measure timesig
21.jun (la)
      - add more glyphs for old notation (patch from miwarre)
      - add undo support for scnote pitch and tuning
20.jun (la)
      - fix crash on capella import with timesig 0
      - fix #11164 : Synth control status on startup
      - fix #11164 : Synth control during audio export
19.jun (lv)
      - fix MusicXML import/export of notehead color
      - add MusicXML testfile for noteheads
14.jun (la)
      - add sol notehead
      - enhance plugin framework : chord.small, chord.noStem, rest.small, note.velocity, score.keysig
      - fix import of MXL
      - import & export harmony even if not on chord/rest in MusicXML
12.jun (la)
      - measure number no more selectable to avoid crash on undo
      - barline at start of system not selectable to avoid crash on undo
      - can't create empty part
      - some memory leak to avoid crash on undo...
11.jun (la)
      - Restore ability to delete instrument name in place
      - Right click on instrument name for staff properties
      - fix #11019: new files: jazz templates, demo & chord styles by Marc Sabatella
      - new chordstyle is apply now immediatly
      - fix #5142: Notes do not release together in Swing or Shuffle mode
10.jun (la)
      - update musescore.com plugin
      - remove "what's this" in toolbar and help menu
06.jun (la)
      - fix #10564: Selecting voice before enabling Note Entry and entering notes causes crash
      - fix #9107: Pasting multiple multi-voice notes causes crash
      - remove delete button in symboldialog, fix system flag
      - fix crash on WAV export in fluid
04.jun (la)